RET-5973 (#1341)
* Updates for caching admin user token.

* Updates for caching admin user token.

* Updates for caching admin user token.